# Echo

./: CONTRIBUTING.md  LICENSE  PLUGINS.md  README.md  plan.md
.github/workflows/: ci.yml  release.yml
context/: Echo_Development_Roadmap.md  Echo_PRD_v1.md  Echo_System_Architecture.md  Echo_Technical_Design.md
docs/: BUNDLING.md  RELEASING.md
echo-app/: .gitignore  package-lock.json  package.json
echo-app/scripts/: stage-runtime-deps.mjs
echo-app/src/: App.tsx  main.tsx  styles.css  update.ts
echo-app/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
echo-app/src-tauri/.cargo/: audit.toml
echo-app/src-tauri/capabilities/: default.json
echo-app/src-tauri/echo-sdk/: Cargo.toml  README.md
echo-app/src-tauri/echo-sdk/src/: lib.rs
echo-app/src-tauri/resources/: README.md
echo-app/src-tauri/src/: error.rs  lib.rs  state.rs
echo-app/src-tauri/src/commands/: app.rs  asr.rs  audio.rs  dictionary.rs  history.rs  hotkey.rs  injection.rs  mod.rs  plugins.rs  providers.rs  recording.rs  settings.rs  telemetry.rs
echo-app/src-tauri/src/core/: events.rs  mod.rs  runtime_deps.rs
echo-app/src-tauri/src/core/asr/: binary_manager.rs  deepgram.rs  manager.rs  mod.rs  model_manager.rs  openai.rs  wav.rs  whisper.rs  whisper_cli.rs
echo-app/src-tauri/src/core/audio/: mod.rs
echo-app/src-tauri/src/core/dictionary/: mod.rs
echo-app/src-tauri/src/core/injection/: mod.rs
echo-app/src-tauri/src/core/plugins/: loader.rs  mod.rs
echo-app/src-tauri/src/core/telemetry/: mod.rs
echo-app/src-tauri/src/core/vad/: mod.rs  silero.rs
echo-app/src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
echo-app/src-tauri/src/storage/: db.rs  keychain.rs  mod.rs  models.rs  repositories.rs
echo-app/src/components/common/: HotkeyCapture.tsx
echo-app/src/components/dictionary/: DictionaryPanel.tsx
echo-app/src/components/history/: HistoryPanel.tsx
echo-app/src/components/onboarding/: Onboarding.tsx
echo-app/src/components/pill/: Pill.tsx  Waveform.tsx
echo-app/src/components/plugins/: PluginsPanel.tsx
echo-app/src/components/recording/: RecordingPanel.tsx
echo-app/src/components/settings/: CloudProviders.tsx  ModelSelector.tsx  SettingsPanel.tsx  TelemetrySettings.tsx
echo-app/src/hooks/: useAudioLevel.ts  useEchoEvents.ts
echo-app/src/ipc/: commands.ts  events.ts
echo-app/src/store/: recordingStore.ts
echo-app/src/windows/: PillApp.tsx
packaging/flatpak/: com.echo.app.yml
packaging/homebrew/: echo.rb
packaging/snap/: snapcraft.yaml
packaging/winget/: Echo.Echo.installer.yaml
website/: .gitignore  next.config.ts  package-lock.json  package.json
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/app/download/: page.tsx
website/src/app/features/: page.tsx
website/src/app/pricing/: page.tsx
website/src/components/sections/: FeatureIndex.tsx  FinalCTA.tsx  Hero.tsx  HowItWorks.tsx  Marquee.tsx  Privacy.tsx
website/src/components/site/: Footer.tsx  Logo.tsx  Nav.tsx  PageHero.tsx  PillMock.tsx
website/src/components/ui/: Magnetic.tsx  Reveal.tsx  TypeText.tsx  WaveSignal.tsx
website/src/lib/: links.ts
