[package]
name = "echo"
version = "0.1.0"
description = "Echo - Universal Voice Keyboard"
authors = []
edition = "2021"

[lib]
name = "echo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Local Whisper transcription via whisper-rs. Off by default because building
# whisper.cpp requires cmake + libclang (LLVM) on the build machine.
# Enable with: cargo build --features whisper
whisper = ["dep:whisper-rs"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

rusqlite = { version = "0.31", features = ["bundled"] }

cpal = "0.15"
ringbuf = "0.3"

thiserror = "1"
anyhow = "1"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

async-trait = "0.1"

# HTTP client for downloading ASR models and calling cloud ASR APIs (uses
# platform default TLS — schannel on Windows — to avoid extra native build deps).
reqwest = { version = "0.12", features = ["stream", "multipart", "json"] }
futures-util = "0.3"

# WAV encoding for cloud ASR uploads.
hound = "3.5"

# Secure API-key storage in the OS keychain.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Dynamic loading of native plugins (experimental, advisory permission model).
libloading = "0.8"

# Local Whisper (optional — see [features].whisper above).
whisper-rs = { version = "0.13", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.24", features = ["highsierra"] }
core-foundation = "0.10"

