[package]
name = "echo-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Public API for writing Echo plugins (native shared-library plugins loaded by the Echo voice keyboard)."
repository = "https://github.com/vedantnimbarte/Echo"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
